Fixed spacing on style.css

--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,13 @@ body {
 }
 
 #mainHeading {
-    color:red;
+    color: red;
     text-align: center;
     justify-content: center;
 }
 
-#testP {
-    color:green;
+.funParagraph {
+    color: green;
 }
 
 .readability {
